<resources>
    <string name="app_name">Tiến lên miền nam</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email hoặc tài khoản</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="chao_mung">"Chào mừng trở lại !"</string>
    <string name="sai_thong_tin_dang_nhap">Sai thông tin đăng nhập</string>
    <string name="mat_khau_qua_ngan">Mật khẩu phải có ít nhất 6 ký tự</string>
    <string name="dang_nhap_that_bai">"Thông tin đăng nhập không đúng"</string>
    <string name="sai_dinh_dang_email">Sai định dạng email</string>
    <string name="tai_khoan_qua_ngan_qua_dai">Tài khoản phải có ít nhất 6 ký tự và tối đa 12 ký tự</string>
    <string name="tai_khoan_da_ton_tai">Tài khoản đã tồn tại</string>
    <string name="ten_dang_nhap_da_ton_tai">Tên đăng nhập đã tồn tại</string>
    <string name="email_da_ton_tai">Email đã tồn tại</string>
    <string name="mat_khau_khong_khop">Mật khẩu không trùng khớp</string>
    <string name="luu_thong_tin">Lưu thông tin đăng nhập</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="email">Email</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="tao_tai_khoan">Tạo tài khoản</string>
    <string name="bieu_thuc_chinh_quy_kiem_tra_email" translatable="false">^[a-zA-Z0-9_%+-][a-zA-Z0-9._%+-]*[a-zA-Z0-9_%+-]@([a-zA-Z0-9-]{2,}\.){1,}[a-zA-Z]{1,}$</string>
    <string name="bieu_thuc_chinh_quy_kiem_tra_ten_dang_nhap" translatable="false">^[a-zA-Z0-9]{6,12}$</string>
    <string name="sai_dinh_dang_mat_khau">Mật khẩu phải có từ 6 đến 32 ký tự</string>
    <string name="thieu_tai_khoan_mat_khau">Nhập đầy đủ thông tin</string>
    <string name="gui_lai_email">Gửi lại email</string>
    <string name="gui_lai_email_sau">Gửi lại sau</string>
    <string name="dang_ky_that_bai">Đăng ký thất bại. Lỗi: </string>
    <string name="dang_nhap_that_bai_loi">Đăng nhập thất bại. Lỗi: </string>
    <string name="gui_email_xac_thuc_thanh_cong">Email xác thực đã được gửi! Vui lòng kiểm tra hộp thư.</string>
    <string name="gui_email_that_bai">Gửi email thất bại. Lỗi: </string>
    <string name="tai_khoan_chua_xac_thuc_gui_lai_email">Tài khoản chưa được xác thực. Bạn có muốn gửi lại email xác thực?</string>
    <string name="tai_khoan_chua_xac_thuc">Tài khoản chưa được xác thực</string>
    <string name="tai_khoan_da_xac_thuc">Tài khoản đã được xác thực</string>
    <string name="co">Có</string>
    <string name="khong">Không</string>
    <string name="thoi_gian_gui_lai_email_milisecond">30000</string>
    <string name="ten_dang_nhap_khong_hop_le">Tên đăng nhập không hợp lệ</string>
    <string name="loi">Lỗi:</string>
    <string name="khong_co_internet">Không có kết nối Internet</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="email_hoac_mat_khau_khong_hop_le">Email hoặc mật khẩu không hợp lệ</string>
    <string name="thu_qua_nhieu_lan">Bạn đã thử quá nhiều lần! Vui lòng thử lại sau.</string>"
    <string name="thieu_email">Hãy nhập email</string>
    <string name="gui_email_reset_mat_khau_thanh_cong">Email lấy lại mật khẩu đã được gửi! Vui lòng kiểm tra hộp thư.</string>
    <string name="email_khong_ton_tai">Email không tồn tại</string>
    <string name="game_bai_danh_khong_hop_le">Bài đánh không hợp lệ!</string>
    <string name="game_ban_thang">Bạn Thắng</string>
    <string name="game_ban_thua">Bạn Thua</string>
    <string name="game_nhat">Nhất</string>
    <string name="game_tu_quy_2">Tứ Quý 2</string>
    <string name="game_se_thoat">Sẽ thoát khi trận đấu kết thúc</string>
    <string name="cap_quyen_trong_cai_dat">Cần vào cài đặt ứng dụng để cấp quyền</string>
    <string name="tai_khoan_khong_tai_duoc_xac_thuc">Tài khoản không hợp lệ hoặc đã xác thực</string>
    <string name="game_ten_nguoi_choi_mac_dinh">\????????????</string>
    <string name="game_tien_mac_dinh">\?$</string>
    <string name="dang_nhap_tren_thiet_bi_khac">Tài khoản được đăng nhập trên thiết bị khác</string>
    <string name="game_ma_phong">Mã phòng:</string>
    <string name="loi_tim_tran">Lỗi tìm trận, vui lòng thử lại</string>
    <string name="loi_tao_phong">Không thể tạo phòng vào lúc này</string>
    <string name="hay_nhap_ma_phong">Hãy nhập mã phòng</string>
    <string name="loi_tim_phong">Không thể tìm phòng vào lúc này</string>
    <string name="dang_tai">Đang tải ...</string>
    <string name="dang_tim_phong">Đang tìm phòng ...</string>
    <string name="dang_tao_phong">Đang tạo phòng</string>
    <string name="game_ket_thuc">Trận đấu đã kết thúc</string>
    <string name="game_dang_cho_nguoi_choi">Đang chờ người chơi ...</string>
    <string name="game_bat_dau_sau">"Trận đấu bắt đầu sau: "</string>
    <string name="game_dang_cho_chu_phong">Đang chờ chưởng buồng bắt đầu ...</string>
    <string name="khong_co_internet_dang_nhap_lai">Không có kết nối internet, vui lòng đăng nhập lại</string>
    <string name="game_dang_tai">Đang tải ...</string>
    <string name="dang_dang_ky">Đang tạo tài khoản ...</string>
    <string name="dang_dang_nhap">Đang đăng nhập ...</string>
    <string name="dang_nhap_het_han">Phiên đăng nhập đã hết hạn</string>
    <string name="game_da_san_sang">Huỷ sẵn sàng để thoát</string>
    <string name="game_cho_tran_dau_ket_thuc">Hãy chờ trận đấu mà bạn bỏ dở kết thúc</string>
    <string name="thanh_toan_qua_zalo_pay">Thanh toán qua</string>
    <string name="thanh_toan_thanh_cong">Thanh toán thành công</string>
    <string name="thanh_toan_them">Bạn có muốn thực hiện thêm giao dịch?</string>
    <string name="thanh_toan_bi_huy">Thanh toán bị huỷ\n</string>
    <string name="thanh_toan_that_bai">Thanh toán thất bại\n</string>
    <string name="chua_tai_zalopay">Bạn chưa cài đặt ZaloPay</string>
    <string name="game_khong_du_tien">Bạn không đủ 130$ để tham gia trò chơi</string>
    <string name="ok">Ok</string>
    <string name="huy">Huỷ</string>
    <string name="game_huong_dan">Hướng dẫn</string>
    <string name="game_noi_dung_huong_dan"><![CDATA[Giới thiệu\n\n*Quá trình chơi:\n+Khi bắt đầu chơi mỗi người được chia 13 lá bài.\n+Lượt đánh bài ngược chiều kim đồng hồ.\n+Người chơi sẽ được bắt đầu trước.\n\n*Khi đến lượt chơi,mỗi người có 4 lựa chọn sau:\n+Đánh bất kể lá bài, bộ bài nào nếu người chơi là người đánh đầu tiên hoặc các người chơi khác bỏ lượt.\n+Đánh những là bài hợp lệ hoặc đánh bộ bài chặn được bộ bài vừa đánh trên bàn chơi\n+Bỏ lượt chơi nếu không có bất cứ bộ bài nào chặn được hoặc không muốn chặn.\n+Hết thời gian tự động bỏ lượt nếu người chơi không chọn bấm nút đánh.\n- Chú ý: Nếu người chơi bỏ lượt thì người chơi sẽ không được tham gia đánh bài khi chưa kết thúc vòng.\n\n*Quy định chặt hàng trong luật chơi tiến lên Miền Nam:\n+3 đôi thông chặt được 1 cây 2 hoặc 3 đôi thông nhỏ hơn.\n+4 đôi thông chặt được 1, 2 cây 2, tứ quý hoặc 3, 4 đôi thông nhỏ hơn.\n+Chặt 2 thì không cần vòng.\n+Sở hữu tứ quý 2 người chơi thắng ngay lập tức.\n+Tứ quý chặn được 1 cây 2 hoặc 3 đôi thông bất kỳ.\n\nQuy định về phần chơi online:\n-Hành vi rời trận là bị cấm, hãy đảm bảo kết nối mạng tốt để tránh bị thoát trận\n-Sau khi thoát trận người chơi sẽ không thể chơi các chế độ chơi online khi trận đấu cũ chưa kết thúc\n-Việc đăng nhập ở thiết bị khác khi đang trong trận cũng gây thoát trò chơi]]></string>
    <string name="nhan_tien_thanh_cong">Nhận quà thành công</string>
    <string name="da_nhan_tien_hom_nay">Bạn đã nhận quà hôm nay. Hãy nạp tiền nếu bạn không chờ được đến ngày mai :)</string>
    <string name="phong_da_day_hoac_khong_ton_tai">Phòng không tồn tại, đã bắt đầu trận đấu hoặc đã đầy</string>
    <string name="ma_qua_khong_hop_le">Mã quà không hợp lệ</string>
    <string name="dang_xu_ly">Đang xử lý</string>
    <string name="loi_tai_du_lieu">Lỗi tải dữ liệu</string>
    <string name="chua_co_gi_o_day">Chưa có gì ở đây</string>
    <string name="phan_hoi">Phản hồi</string>
    <string name="yeu_cau_chua_duoc_phan_hoi">Chưa có phản hồi. Hãy kiên nhẫn chờ chúng tôi!</string>
    <string name="ban_co_yeu_cau_ho_tro_dang_cho_phan_hoi">Bạn vẫn còn yêu cầu đang chờ phản hồi</string>
    <string name="hay_nhap_tieu_de">Hãy nhập tiêu đề</string>
    <string name="hay_nhap_noi_dung">Hãy nhập nội dung</string>
    <string name="dang_gui_yeu_cau">Đang gửi yêu cầu...</string>
    <string name="gui_yeu_cau_ho_tro_thanh_cong">Gửi yêu cầu hỗ trợ thành công</string>
    <string name="chua_co_quang_cao">Hiện chưa có quảng cáo để hiển thị</string>
    <string name="loi_chap_nhan_loi_moi">Có lỗi xảy ra khi chấp nhận lời mời kết bạn</string>
    <string name="chap_nhan_loi_moi_ket_ban_thanh_cong">Chấp nhận lời mời thành công</string>
    <string name="tu_choi_loi_moi_ket_ban_thanh_cong">Từ chối lời mời thành công</string>
    <string name="loi_tu_choi_loi_moi">Có lỗi xảy ra khi từ chối lời mời</string>
    <string name="huy_ket_ban_thanh_cong">Huỷ kết bạn thành công</string>
    <string name="loi_huy_ket_ban">Có lỗi xảy ra khi huỷ kết bạn\n</string>
    <string name="them_ban_be_thanh_cong">Thêm bạn bè thành công\n</string>
    <string name="loi_them_ban_be">Có lỗi xảy ra khi thêm bạn bè</string>
    <string name="ban_da_la_ban_be">bạn và người chơi này đã là bạn bè</string>
    <string name="nguoi_choi_da_gui_loi_moi_ket_ban">Người chơi này đã gửi lời mời kết bạn, hãy xác nhận\n</string>
    <string name="ban_da_gui_loi_moi_ket_ban">Bạn đã gửi lời mời cho người chơi này, hãy chờ họ xác nhận</string>
    <string name="them_ban_be">thêm bạn bè</string>
    <string name="xu">xu</string>
    <string name="ban_chua_online">Người chơi này chưa online\n</string>
    <string name="ban_dang_choi">Người chơi này đang trong trận đấu khác</string>
    <string name="Tu_choi">Từ chối</string>
    <string name="Tham_gia">Tham gia</string>
    <string name="noi_dung_loi_moi">Nguời chơi %1$s mời bạn tham gia phòng với mã %2$s</string>
    <string name="choi_ngay">Chơi ngay</string>
    <string name="su_kien">Sự kiện</string>
    <string name="free_xu">Xu miễn phí</string>
    <string name="ban_be">Bạn bè</string>
    <string name="nhan_thuong_quang_cao_thanh_cong">Bạn đã nhận được %1$d %2$s từ việc xem quảng cáo</string>
    <string name="loi_nhan_thuong_quang_cao">Có lỗi xảy ra khi nhận thưởng</string>
    <string name="dat_gioi_han_xem_quang_cao">Bạn đã đạt gới hạn quảng cáo trong ngày (%1$d/%2$d), hoàn thành 1 trận đấu sẽ tăng giới hạn lên 1</string>
    <string name="nhan">Nhận</string>
    <string name="xem">Xem</string>
    <string name="co_loi_xay_ra">Có lỗi xảy ra, vuy lòng thử lại</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="SU_KIEN">SỰ KIỆN</string>
    <string name="CHOI">CHƠI</string>
    <string name="nap_xu">Kiếm thêm xu</string>
    <string name="ket_noi">Kết nối</string>
    <string name="ket_noi_facebook_de_tim_ban">Kết nối Facebook để đồng bộ bạn bè</string>
    <string name="facebook_da_ket_noi">Bạn đã kết nối tài khoản facebook</string>
    <string name="fb_login_protocol_scheme">fb1486411345778719</string>
    <string name="facebook_app_id">1486411345778719</string>
    <string name="facebook_client_token">414fe135157a1a95211b3546deb346c5</string>
    <string name="khong_tim_duoc_ban">Không tìm thấy bạn bè?</string>
</resources>